Fixed navbar with WordSquish logo
Also includes a menu item for username to appear when signed in.
Explicitly says 'Not Signed In' when that is the case.

--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,23 @@
-body {
+/*body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-}
+}*/
 
-li {
+/*li {
   list-style: none;
   display: inline;
   margin: 8px;
+}*/
+
+main {
+  margin-top: 80px;
 }
 
-header {
-  /*border: 1px solid black;*/
-  margin: 4px;
+.navbar {
+  margin: 0;
+  background-color: rgba(81, 127, 153, 0.75) !important;
+  border-radius: 0 !important;
 }
 
 .post {
@@ -20,6 +25,7 @@ header {
   margin: 3px;
 }
 
-.wordpress {
-  font-size: 30px !important;
+.logo {
+  font-family: 'Chewy', cursive;
+  font-size: 25px !important;
 }
